--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,8 +25,15 @@ jobs:
       - name: Build project
         run: npm run build
 
+      - name: Copy files
+        run: |
+          cp -r out/* .
+          cp out/404.html 404.html
+          touch .nojekyll
+
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./out 
+          publish_dir: .
+          enable_jekyll: false 
