--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -25,15 +28,12 @@ jobs:
       - name: Build project
         run: npm run build
 
-      - name: Copy files
-        run: |
-          cp -r out/* .
-          cp out/404.html 404.html
-          touch .nojekyll
+      - name: Add .nojekyll file
+        run: touch out/.nojekyll
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: .
-          enable_jekyll: false 
+          publish_dir: ./out
+          cname: www.lumex.co.kr 
